[package]
name = "cellgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
serde = { version = "1.0.164", features = ["serde_derive", "rc"] }
midi-msg = "0.4.0"
egui-macroquad = "0.15.0"
logos = "0.13.0"
peg = "0.8.1"
rfd = "0.11.4"
serde_json = "1.0.97"
